fixed footer icon overflow with responsive media query

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -8,7 +8,6 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	width: 100%;
-	height: 100%;
 	margin: 0px;
 	padding: 0px;
 	overflow-x: hidden;
