--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -110,9 +110,11 @@
 	}
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
 	.social-links a {
 		margin: auto;
-		font-size: 1rem;
+		font-size: 2.5rem;
+		position: relative;
+		right: 20px;
 	}
 }
